--- a/test/new-framework/testcases/template.html
+++ b/test/new-framework/testcases/template.html
@@ -37,25 +37,14 @@ limitations under the License.
 </diV>
 
 <script src="../../../web-animations.js"></script>
-<script src="../testharness/testharness.js"></script>
-<script src='../testharness/testharnessreport.js'></script>
-<script src='../extra-asserts.js'></script>
-<link rel='stylesheet' href='../testharness/testharness.css'>
-<link rel='stylesheet' type="text/css" href="../animation-test-style.css">
+<script src="../anim-test-pre.js"></script>
 
 <script>
-//must call at the begining
-setupTests();
-
 //Your animations code goes here
 //e.g. create a new animation
 //document.timeline.play(new Animation(document.querySelector(".anim"), {left: "600px"}, {duration: 2})); 
 
-//Your tests go here
+//Your tests go here or in a separate file called 'thisfile-checks.js'
 //e.g. create a new check (test)
 //check(document.querySelector(".anim"), {"left":"300px"}, 1, "300px at 3 secs");
-
-//must call at the end
-runTests();
-
 </script>
