--- a/test/new-framework/testcases/test-groupings.html
+++ b/test/new-framework/testcases/test-groupings.html
@@ -52,14 +52,9 @@ Written By Sarah Heimlich
 </div>
 
 <script src="../../../web-animations.js"></script>
-<script src="../testharness/testharness.js"></script>
-<script src='../testharness/testharnessreport.js'></script>
-<script src='../extra-asserts.js'></script>
-<link rel='stylesheet' href='../testharness/testharness.css'>
-<link rel='stylesheet' type="text/css" href="../animation-test-style.css">
+<script src="../anim-test-pre.js"></script>
 
 <script>
-setupTests();
 var leftDown = new SeqGroup([]);
 
 var left = new ParGroup([], {}, leftDown);
@@ -75,10 +70,7 @@ new Animation(bottomObject, {top: ["100px", "500px"]}, {duration: 1}, down);
 
 document.timeline.play(leftDown);
 
-//leftDown.play();
 check(topObject, {"left":"300px"}, 0.5, "The elements have moved left");
 check(topObject, {"top":"300px"}, 1.5, "The elements have moved down");
 check(topObject, {"left":bottomObject, "top":bottomObject}, 0.2, "Objects move together", true);
-
-runTests();
 </script>
