--- a/test/new-framework/testcases/test-iterations-basic.html
+++ b/test/new-framework/testcases/test-iterations-basic.html
@@ -86,14 +86,9 @@ limitations under the License.
 </div>
 
 <script src="../../../web-animations.js"></script>
-<script src="../testharness/testharness.js"></script>
-<script src='../testharness/testharnessreport.js'></script>
-<script src='../extra-asserts.js'></script>
-<link rel='stylesheet' href='../testharness/testharness.css'>
-<link rel='stylesheet' type="text/css" href="../animation-test-style.css">
+<script src="../anim-test-pre.js"></script>
 
 <script>
-setupTests({"testLength":4});
 var containers = ["ca", "cb", "cc", "cd"];
 
 var directions = ["normal", "reverse", "alternate", "alternate-reverse"];
@@ -175,6 +170,4 @@ check(document.querySelectorAll('.anim')[8],{'left':'180px'},4);
 check(document.querySelectorAll('.anim')[9],{'left':'180px'},4);
 check(document.querySelectorAll('.anim')[10],{'left':'180px'},4);
 check(document.querySelectorAll('.anim')[11],{'left':'180px'},4);
-
-runTests();
 </script>
