--- a/test/new-framework/testcases/test-playback-rate.html
+++ b/test/new-framework/testcases/test-playback-rate.html
@@ -60,15 +60,9 @@ Written By Sarah Heimlich
 </div>
 
 <script src="../../../web-animations.js"></script>
-<script src="../testharness/testharness.js"></script>
-<script src='../testharness/testharnessreport.js'></script>
-<script src='../extra-asserts.js'></script>
-<link rel='stylesheet' href='../testharness/testharness.css'>
-<link rel='stylesheet' type="text/css" href="../animation-test-style.css">
+<script src="../anim-test-pre.js"></script>
 
 <script>
-setupTests({testTimeout: 20000});
-
 var topObjects = document.querySelectorAll(".top");
 var bottomObjects = document.querySelectorAll(".bottom");
 
@@ -83,6 +77,4 @@ for (var i = 0; i < topObjects.length; i++) {
   check(topObjects[i], {"left":"600px"}, 2, "End position check "+ i);
 }
 
-runTests();
 </script>
-
