--- a/test/new-framework/testcases/test-text-shadow.html
+++ b/test/new-framework/testcases/test-text-shadow.html
@@ -39,14 +39,9 @@ limitations under the License.
 </div>
 
 <script src="../../../web-animations.js"></script>
-<script src="../testharness/testharness.js"></script>
-<script src='../testharness/testharnessreport.js'></script>
-<script src='../extra-asserts.js'></script>
-<link rel='stylesheet' href='../testharness/testharness.css'>
-<link rel='stylesheet' type="text/css" href="../animation-test-style.css">
+<script src="../anim-test-pre.js"></script>
 
 <script>
-setupTests();
 var anim = document.getElementById("victim");
 document.timeline.play(new Animation(anim,
     {'textShadow': ['100px 100px red, 0px 100px 5px red', '0px 0px']}, {duration:2, startDelay:1}));
@@ -55,5 +50,4 @@ document.timeline.play(new Animation(anim,
 // The quick solution is to pass in rgba instead of color name
 check(anim, {'textShadow': 'rgb(255, 0, 0) 100px 100px 0px, rgb(255, 0, 0) 0px 100px 5px'}, 1, "start check");
 check(anim, {'textShadow': '0px 0px'}, 3, "end check");
-runTests();
 </script>
