--- a/test/testcases/test-calc.html
+++ b/test/testcases/test-calc.html
@@ -106,6 +106,7 @@ completely cover the light red box when the animation has finished.
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var dt = document.timeline;
