--- a/test/testcases/test-change-playback-rate.html
+++ b/test/testcases/test-change-playback-rate.html
@@ -33,6 +33,7 @@ limitations under the License.
 
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var a1 = new Animation(document.querySelector("#a"),
