--- a/test/testcases/test-clone.html
+++ b/test/testcases/test-clone.html
@@ -38,6 +38,7 @@ body.fail div#fail {
 <div id="anim"></div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var fail = function(failureMessage) {
