--- a/test/testcases/test-color-names.html
+++ b/test/testcases/test-color-names.html
@@ -17,6 +17,7 @@ limitations under the License.
 <!DOCTYPE html>
 <body>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var colors = [
