--- a/test/testcases/test-composite-transforms.html
+++ b/test/testcases/test-composite-transforms.html
@@ -60,6 +60,7 @@ limitations under the License.
 <div id="d" style="top: 550px; left: 0px;" class="expected"></div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var divs = document.querySelectorAll(".anim");
