--- a/test/testcases/test-compositing-order.html
+++ b/test/testcases/test-compositing-order.html
@@ -45,6 +45,7 @@ div.anim {
 <div id="target4" class="anim"></div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var check = function(actual, expected, failureMessage) {
