--- a/test/testcases/test-dynamic-load.html
+++ b/test/testcases/test-dynamic-load.html
@@ -44,6 +44,7 @@ limitations under the License.
   window.addEventListener('load', function() {
     var s = document.createElement('script');
     s.src = "../../web-animations.js";
+<script src="../anim-test-pre.js"></script>
     s.addEventListener('load', function() {
       document.timeline.play(new Animation(a,
         {"left": ["0px", "200px"]},
