--- a/test/testcases/test-element-animate.html
+++ b/test/testcases/test-element-animate.html
@@ -24,6 +24,7 @@ body {
 <body>
 PASS
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 document.body.animate({display: 'block'}, 1);
 </script>
