--- a/test/testcases/test-font-weight.html
+++ b/test/testcases/test-font-weight.html
@@ -35,6 +35,7 @@ limitations under the License.
 <div class='test target' style='font-weight: 900;'>Testing font-weight!</div>
 <div class='test' style='font-weight: 100' id='test'>Testing font-weight!</div>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 document.timeline.play(new Animation(document.querySelector('#test'),
     {'fontWeight': ['100', '900']}, {duration: 1, startDelay: 1}));
