--- a/test/testcases/test-grouped-anim-func.html
+++ b/test/testcases/test-grouped-anim-func.html
@@ -30,6 +30,7 @@ limitations under the License.
   </rect>
 </svg>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 var rect = document.querySelector(".anim");
 
