--- a/test/testcases/test-iteration-start.html
+++ b/test/testcases/test-iteration-start.html
@@ -115,6 +115,7 @@ reversed).</div>
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var containers = ["ca", "cb", "cc", "cd"];
