--- a/test/testcases/test-iterations-basic.html
+++ b/test/testcases/test-iterations-basic.html
@@ -84,6 +84,7 @@ iteration (or start if reversed).</div>
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var containers = ["ca", "cb", "cc", "cd"];
