--- a/test/testcases/test-parent.html
+++ b/test/testcases/test-parent.html
@@ -36,6 +36,7 @@ limitations under the License.
 <div style="width: 300px;" class="expect"><div id="d" class="anim"></div></div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var dt = document.timeline;
