--- a/test/testcases/test-path.html
+++ b/test/testcases/test-path.html
@@ -63,6 +63,7 @@ height: 500px;
 
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var animFunc = new PathAnimationEffect(
