--- a/test/testcases/test-pause.html
+++ b/test/testcases/test-pause.html
@@ -58,6 +58,7 @@ limitations under the License.
 <div id="d" class="anim b"></div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var a1 = new Animation(document.querySelector("#a"), {left: ["100px", "200px"]},
