--- a/test/testcases/test-rectangle.html
+++ b/test/testcases/test-rectangle.html
@@ -33,6 +33,7 @@ position: absolute;
 <div id="expectation"></div>
 <div id="test"></div>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 var anim = {'clip': [
   'rect(300px, 400px, 300px, 400px)',
