--- a/test/testcases/test-reparent.html
+++ b/test/testcases/test-reparent.html
@@ -37,6 +37,7 @@ limitations under the License.
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 // Run a simple animation. It should animate indefinitely.
