--- a/test/testcases/test-start-time-iterations.html
+++ b/test/testcases/test-start-time-iterations.html
@@ -79,6 +79,7 @@ that the position of the last element in each group is approximate.</div>
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var containers = ["ca", "cb", "cc", "cd"];
