--- a/test/testcases/test-timing-functions.html
+++ b/test/testcases/test-timing-functions.html
@@ -49,6 +49,7 @@ body { margin: 0px; }
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 document.timeline.play(new Animation(document.querySelector("#a"),
