--- a/test/testcases/test-transform-units.html
+++ b/test/testcases/test-transform-units.html
@@ -33,6 +33,7 @@ limitations under the License.
 </style>
 <div></div>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 // TODO: refactor into test harness
 function detectFeatures() {
