--- a/test/testcases/test-visibility.html
+++ b/test/testcases/test-visibility.html
@@ -33,6 +33,7 @@ body {
 }
 </style>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 var timing = {duration: 0.5, timingFunction: 'steps(2, end)'};
 
