--- a/test/testcases/test-color.html
+++ b/test/testcases/test-color.html
@@ -57,6 +57,7 @@ All three boxes should end up the same color as the outline.
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var dt = document.timeline;
