--- a/test/testcases/test-compositor.html
+++ b/test/testcases/test-compositor.html
@@ -33,6 +33,7 @@ limitations under the License.
   <rect class="anim2" x="100px" y="10px" width="100px" height="100px"></rect>
 </svg>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 var rect = document.querySelector(".anim")
 var rect2 = document.querySelector(".anim2")
