--- a/test/testcases/test-integer.html
+++ b/test/testcases/test-integer.html
@@ -28,6 +28,7 @@ position:absolute;
 <body>
 <div id="test"></div>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 var width = 25;
 var totalWidth = 800;
