--- a/test/testcases/test-keyframe-creation.html
+++ b/test/testcases/test-keyframe-creation.html
@@ -76,6 +76,7 @@ limitations under the License.
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var dt = document.timeline;
