--- a/test/testcases/test-preset-timings.html
+++ b/test/testcases/test-preset-timings.html
@@ -28,6 +28,7 @@ span {
 <body>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 function testTiming(name) {
   var timingFun = TimingFunction.createFromString(name);
