--- a/test/testcases/test-repeated-pause.html
+++ b/test/testcases/test-repeated-pause.html
@@ -42,6 +42,7 @@ div.anim {
 <div id="anim" class="anim"></div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var fail = function(failureMessage) {
