--- a/test/testcases/test-restart.html
+++ b/test/testcases/test-restart.html
@@ -43,6 +43,7 @@ div.anim {
 <div id="anim2" class="anim"></div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var fail = function(failureMessage) {
