--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -59,6 +59,7 @@ limitations under the License.
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var containers = ["ca", "cb"];
