--- a/test/testcases/test-step.html
+++ b/test/testcases/test-step.html
@@ -28,6 +28,7 @@ span {
 <body>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 function testStep(numSteps, position) {
   var stepFun = new StepTimingFunction(numSteps, position);
