--- a/test/testcases/test-svg-anim.html
+++ b/test/testcases/test-svg-anim.html
@@ -30,6 +30,7 @@ limitations under the License.
   <rect class="anim" x="100px" y="10px" width="100px" height="100px"></rect>
 </svg>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 var rect = document.querySelector(".anim")
 
