--- a/test/testcases/test-to-animation.html
+++ b/test/testcases/test-to-animation.html
@@ -66,6 +66,7 @@ limitations under the License.
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var divs = document.querySelectorAll(".anim");
