--- a/test/testcases/test-transform-3d.html
+++ b/test/testcases/test-transform-3d.html
@@ -49,6 +49,7 @@ limitations under the License.
 </style>
 <div class="container"></div>
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var transformValues = [
