Remove media element from its controller when using with MediaReference

--- a/test/testcases/test-media.html
+++ b/test/testcases/test-media.html
@@ -305,7 +305,24 @@ var continuation15 = function() {
 var continuation16 = function() {
   // Test zero intrinsic duration.
   // TODO: Need to find a zero length video.
-  finished();
+  continuation17();
+};
+
+var continuation17 = function() {
+  // Test that media elements are removed from their MediaController.
+  video.controller = new MediaController();
+  var player = dt.play(new MediaReference(video));
+  check(video.controller, null,
+     "Video should be detached from controller when used in MediaReference");
+  // Seeking the video will throw if the controller has not been detached.
+  player.paused = true;
+  player.currentTime = 1.0;
+  raf(function() {
+    check(video.currentTime, 1.0,
+        "Detaching controller should allow video to be seeked");
+    player.source = null;
+    finished();
+  });
 };
 
 var finished = function() {
